<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ivolnov.ytranslator.fragments.TranslatorFragment">

    <EditText
        android:id="@+id/query"
        style="@android:style/TextAppearance.Large"
        android:gravity="start|top"
        android:padding="@dimen/edit_text_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:background="@drawable/edit_text_border"
        android:inputType="textMultiLine"
        android:minHeight="@dimen/min_height_medium"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintTop_toBottomOf="@+id/swapLanguage" />

    <TextView
        style="@android:style/TextAppearance.Large"
        android:id="@+id/translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:minHeight="@dimen/min_height_small"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/dictionary"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:name="com.ivolnov.yinterpretor.TranslatorFragment"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.ivolnov.ytranslator.fragments.TranslatorFragment"
        tools:listitem="@layout/dictionary_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/translation" />

    <Spinner
        android:id="@+id/sourceSpinner"
        style="@style/SpinnerAsEditText"
        android:textAlignment="center"
        android:paddingLeft="@dimen/spinner_horizontal_padding"
        android:paddingRight="@dimen/spinner_horizontal_padding"
        android:background="@android:color/transparent"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toTopOf="@+id/query"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/swapLanguage"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/targetSpinner"
        style="@style/SpinnerAsEditText"
        android:textAlignment="center"
        android:paddingLeft="@dimen/spinner_horizontal_padding"
        android:paddingRight="@dimen/spinner_horizontal_padding"
        app:layout_constraintBottom_toTopOf="@+id/query"
        android:background="@android:color/transparent"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/swapLanguage"/>

    <Button
        android:id="@+id/swapLanguage"
        android:layout_width="@dimen/icon_button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_repeat_black_24dp"
        android:drawableStart="@drawable/ic_repeat_black_24dp"
        android:gravity="center"
        app:layout_constraintLeft_toRightOf="@+id/sourceSpinner"
        app:layout_constraintRight_toLeftOf="@+id/targetSpinner"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
